[package]
name = "master"
version = "0.1.0"
edition = "2024"

[[bin]]
# Cannot use correct name (on-add.relative-uda) due to Cargo limitations. See
# https://github.com/rust-lang/cargo/issues/9778 for tracking.
name = "on-add-relative-uda"
path = "src/main.on-add.relative-uda.rs"

[dependencies]
anyhow = { version = "1.0.100", features = [ "std" ] }
tasklib = { version = "0.4.0" }
